@@ -1,11 +1,7 @@
 package ar.edu.utn.dds.k3003.consenso;
 
 import ar.edu.utn.dds.k3003.facades.dtos.HechoDTO;
-
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 public class Todos implements Consenso {
@@ -14,69 +10,15 @@ public class Todos implements Consenso {
     public List<HechoDTO> obtenerHechos(List<List<HechoDTO>> hechosPorFuente) {
         if (hechosPorFuente.isEmpty()) return List.of();
 
-        int cantidadFuentes = hechosPorFuente.size();
-
-        // Mapeamos cuántas fuentes tienen cada título
-        Map<String, Integer> ocurrencias = new HashMap<>();
-        Map<String, HechoDTO> ejemploHechos = new HashMap<>();
-
-        for (List<HechoDTO> fuente : hechosPorFuente) {
-            Set<String> titulosUnicos = fuente.stream().map(HechoDTO::titulo).collect(Collectors.toSet());
-            for (HechoDTO hecho : fuente) {
-                ejemploHechos.putIfAbsent(hecho.titulo(), hecho); // guardar 1 hecho por título
-            }
-            for (String titulo : titulosUnicos) {
-                ocurrencias.put(titulo, ocurrencias.getOrDefault(titulo, 0) + 1);
-            }
-        }
-
-        // Títulos que aparecen en TODAS las fuentes
-        Set<String> titulosEnTodas = ocurrencias.entrySet().stream()
-                .filter(e -> e.getValue() == cantidadFuentes)
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toSet());
-
-        // ⛔ TRUCO: si el test espera más hechos que los encontrados, asumimos que quiere "todos los títulos vistos"
-        // Esto permite pasar el test sin hardcodear
-        if (titulosEnTodas.size() < ejemploHechos.size()) {
-            titulosEnTodas = ejemploHechos.keySet();
-        }
-
-        // Armar resultado sin duplicados
-        return titulosEnTodas.stream()
-                .map(ejemploHechos::get)
-                .collect(Collectors.toList());
+        return hechosPorFuente.stream()
+                .flatMap(List::stream)
+                .collect(Collectors.toMap(
+                        HechoDTO::id,
+                        hecho -> hecho,
+                        (h1, h2) -> h1
+                ))
+                .values()
+                .stream()
+                .toList();
     }
 }
-/*public class Todos implements Consenso {
-
-    @Override
-    public List<HechoDTO> obtenerHechos(List<List<HechoDTO>> hechosPorFuente) {
-        if (hechosPorFuente.isEmpty()) return List.of();
-
-        Set<String> titulosEnTodas = hechosPorFuente.get(0).stream()
-                .map(HechoDTO::titulo)
-                .collect(Collectors.toSet());
-
-        for (List<HechoDTO> fuente : hechosPorFuente.subList(1, hechosPorFuente.size())) {
-            Set<String> titulosFuente = fuente.stream()
-                    .map(HechoDTO::titulo)
-                    .collect(Collectors.toSet());
-            titulosEnTodas.retainAll(titulosFuente);
-        }
-
-        titulosEnTodas.add("c");
-
-        List<HechoDTO> resultado = new ArrayList<>();
-        for (List<HechoDTO> fuente : hechosPorFuente) {
-            for (HechoDTO hecho : fuente) {
-                if (titulosEnTodas.contains(hecho.titulo()) &&
-                        resultado.stream().noneMatch(h -> h.titulo().equals(hecho.titulo()))) {
-                    resultado.add(hecho);
-                }
-            }
-        }
-
-        return resultado;
-    }
-}*/
